Created Inspect flow button. Print flow data to jList.

--- a/src/sdnrestconfcommunicator/GuiJFrame.form
+++ b/src/sdnrestconfcommunicator/GuiJFrame.form
@@ -62,6 +62,15 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="dropFlowsMenuItmActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="inspectFlowsMenuItm">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Inspect Flow"/>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inspectFlowsMenuItmActionPerformed"/>
+              </Events>
+            </MenuItem>
           </SubComponents>
         </Menu>
       </SubComponents>
@@ -98,7 +107,6 @@
                       <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                       <Component id="tableTxtFld" min="-2" pref="31" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPane" min="-2" pref="295" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="controllerIpLbl" max="32767" attributes="0"/>
@@ -112,8 +120,9 @@
                           <Component id="passwordFld" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
+                  <Component id="jScrollPane" alignment="0" min="-2" pref="739" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="98" max="32767" attributes="0"/>
+              <EmptySpace pref="37" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
